--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^8.2|^8.3",
         "spatie/laravel-package-tools": "^1.10",
         "illuminate/contracts": "^11.0",
-        "filament/forms": "^3.2"
+        "filament/forms": "^3.2",
+        "edd-g/editorjs-simple-html-parser": "^1.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.62",
