--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "spatie/laravel-package-tools": "^1.10",
         "illuminate/contracts": "^11.0",
         "filament/forms": "^3.2",
-        "broqit/editorjs-simple-html-parser": "*"
+        "broqit/editorjs-simple-html-parser": "*",
+        "ext-fileinfo": "*"
     },
     "autoload": {
         "psr-4": {
@@ -29,7 +30,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
