Rename namespace from FilamentEditorJs to Broqit
Updated namespaces across multiple files to reflect the new naming convention. This includes changes in PHP files and composer.json to ensure consistency and autoloading compatibility.

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "FilamentEditorJs\\": "src",
-            "FilamentEditorJs\\Database\\Factories\\": "database/factories"
+            "Broqit\\FilamentEditorJs\\": "src"
         }
     },
     "config": {
@@ -38,7 +37,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "FilamentEditorJs\\FilamentEditorJsServiceProvider"
+                "Broqit\\FilamentEditorJs\\FilamentEditorJsServiceProvider"
             ]
         }
     },
