--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@editorjs/editorjs": "^2.30.5",
         "@editorjs/embed": "^2.7.4",
         "@editorjs/header": "^2.8.7",
+        "@editorjs/helpers": "^0.0.4",
         "@editorjs/image": "^2.9.3",
         "@editorjs/inline-code": "^1.5.1",
         "@editorjs/link": "^2.6.2",
@@ -24,21 +25,21 @@
         "@editorjs/marker": "^1.4.0",
         "@editorjs/nested-list": "^1.4.3",
         "@editorjs/paragraph": "^2.11.6",
+        "@editorjs/quote": "^2.7.0",
         "@editorjs/raw": "^2.5.0",
         "@editorjs/table": "^2.3.0",
+        "@editorjs/text-variant-tune": "^1.0.3",
         "@editorjs/underline": "^1.1.0",
         "@editorjs/warning": "^1.4.0",
         "editorjs-drag-drop": "^1.1.14",
         "editorjs-gallery": "^1.0.12",
         "editorjs-style": "^3.0.3",
-        "editorjs-undo": "^2.0.28",
-        "@editorjs/quote": "^2.7.0",
-        "@editorjs/helpers": "^0.0.4"
+        "editorjs-undo": "^2.0.28"
     },
     "devDependencies": {
-        "laravel-mix": "^6.0.49",
         "eslint": "^8.16.0",
         "eslint-config-airbnb-base": "^15.0.0",
+        "laravel-mix": "^6.0.49",
         "postcss": "^8.4.41",
         "prettier": "^2.7.1"
     }
