--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "editorjs-undo": "^2.0.28"
     },
     "devDependencies": {
+        "editorjs-hyperlink": "^1.0.6",
         "eslint": "^8.16.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "laravel-mix": "^6.0.49",
