--- a/package.json
+++ b/package.json
@@ -31,16 +31,25 @@
         "@editorjs/text-variant-tune": "^1.0.3",
         "@editorjs/underline": "^1.1.0",
         "@editorjs/warning": "^1.4.0",
+        "@tailwindcss/typography": "^0.5.14",
         "editorjs-drag-drop": "^1.1.14",
-        "editorjs-gallery": "^1.0.12",
         "editorjs-style": "^3.0.3",
-        "editorjs-undo": "^2.0.28"
+        "editorjs-toggle-block": "^0.3.16",
+        "editorjs-undo": "^2.0.28",
+        "tailwindcss": "^3.4.10"
     },
     "devDependencies": {
+        "@babel/core": "^7.15.8",
+        "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
         "editorjs-hyperlink": "^1.0.6",
         "eslint": "^8.16.0",
         "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.29.1",
         "laravel-mix": "^6.0.49",
+        "mix-tailwindcss": "^1.3.0",
         "postcss": "^8.4.41",
         "prettier": "^2.7.1"
     }
